# ale-sandbox

./: ALEElasticity.h  ALEElastoPlasticity.h  ALEElastoPlasticityParallel.h  CMakeLists.txt  GeneralizedElastoPlasticMaterial.h  GlobalLeastSquaresProjector.h  HistoryDependentMaterials.h  MaterialStates.h  Materials.h  PostProcessors.h  QPField.h  QuasistaticLagranianElasticity.h  StateFieldManager.h  Tests.h  Time.h  TimeIntegration.h  ale.cc  plot_uniaxial_data.py  print_rk_code.py
gleeble_data/: SG2022_C39.d02  make_gleeble_data_graphs.py
